--- a/playbooks/rhel/rhel-9/roles/ckan/templates/ckan.ini.j2
+++ b/playbooks/rhel/rhel-9/roles/ckan/templates/ckan.ini.j2
@@ -65,9 +65,9 @@ beaker.session.secure = false
 beaker.session.timeout = 600
 
 ## Database settings ###########################################################
-sqlalchemy.url = postgresql://{{ ckan_database.dbuser }}:{{ ckan_database.dbpassword }}@{{ ckan_database.dbhost }}/{{ ckan_database.dbname }}
-ckan.datastore.write_url = postgresql://{{ ckan_database.dbuser }}:{{ ckan_database.dbpassword }}@{{ ckan_database.dbhost }}/{{ ckan_datastore.datastoredb }}
-ckan.datastore.read_url = postgresql://{{ ckan_datastore.datastoreuser }}:{{ ckan_datastore.datastorepassword }}@{{ ckan_datastore.datastorehost }}/{{ ckan_datastore.datastoredb }}
+sqlalchemy.url = postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}/{{ ckan_database.ckan_db }}
+ckan.datastore.write_url = postgresql://{{ ckan_database.ckan_db_user }}:{{ ckan_database.ckan_db_password }}@{{ ckan_database.postgres_host }}/{{ ckan_datastore.datastore_db }}
+ckan.datastore.read_url = postgresql://{{ ckan_datastore.datastore_readonly_user }}:{{ ckan_datastore.datastore_readonly_password }}@{{ ckan_datastore.datastore_host }}/{{ ckan_datastore.datastore_db }}
 ckan.datastore.sqlsearch.enabled = true
 sqlalchemy.pool_pre_ping = true
 # sqlalchemy.<OPTION> = 
