--- a/playbook/roles/solr/templates/solr.service.j2
+++ b/playbook/roles/solr/templates/solr.service.j2
@@ -1,23 +1,67 @@
+# solr service for systemd
 [Unit]
-Description=Apache SOLR
-ConditionPathExists={{solr_dir}}
-After=syslog.target network.target remote-fs.target nss-lookup.target systemd-journald-dev-log.socket
-Before=multi-user.target
-Conflicts=shutdown.target
-StartLimitIntervalSec=60
+Description=Solr {{ solr_version }}
+After=network.target
 
 [Service]
-User={{ solr_user }}
-LimitNOFILE=1048576
-LimitNPROC=1048576
-PIDFile={{ solr_tmp_dir }}/{{ solr_service_name }}-{{ solr_port }}.pid
-Environment=SOLR_INCLUDE={{ solr_config_file }}
-Environment=RUNAS={{ solr_user }}
+Type=simple
+WorkingDirectory={{ solr_data }}
+PIDFile={{ solr_data }}/{{ solr_service_name }}-{{ solr_port }}.pid
+Environment=SOLR_PID_DIR={{ solr_data }}
+Environment=SOLR_HOME={{ solr_data }}/data
+Environment=SOLR_LOGS_DIR={{ solr_data }}/logs
 Environment=SOLR_INSTALL_DIR={{solr_dir}}
-ExecStart={{solr_dir}}/bin/solr start
+
+PrivateDevices=yes
+PrivateTmp=yes
+# Solr does not need access to /home, /root, or /run/user
+ProtectHome=true
+# Solr can live with read-only access to the entire file system hierarchy other
+# than the paths below.
+ProtectSystem=strict
+
+# The service process and all its children can never gain new privileges
+NoNewPrivileges=true
+
+ProtectControlGroups=true
+ProtectKernelModules=true
+ProtectKernelTunables=true
+
+# Do not allow process or its children to create SUID/SGID files/directories
+RestrictSUIDSGID=true
+
+LockPersonality=true
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=~CAP_NET_BROADCAST CAP_NET_RAW
+ProtectHostname=true
+ProtectKernelLogs=true
+ProtectKernelModules=true
+RemoveIPC=true
+RestrictAddressFamilies=~AF_PACKET AF_NETLINK AF_UNIX
+RestrictNamespaces=true
+RestrictRealtime=true
+SystemCallArchitectures=native
+SystemCallFilter=@system-service
+SystemCallFilter=~@privileged @resources
+
+# Allow writing to these paths, but don't fail if they don't exist
+ReadWritePaths=-{{ solr_data }}
+
+User={{ solr_user }}
+Group={{ solr_group }}
+
+ExecStart={{solr_dir}}/bin/solr start -f
 ExecStop={{solr_dir}}/bin/solr stop
-Restart=on-failure
-RestartSec=5
+
+# Recommended system limits
+# See: https://solr.apache.org/guide/8_11/taking-solr-to-production.html
+LimitNOFILE=65000
+LimitNPROC=65000
+LimitAS=infinity
+LimitRSS=infinity
+
+# the JVM exits gracefully with 143 when it receives a SIGTERM (128 + 15 == 143)
+SuccessExitStatus=143
 
 [Install]
 WantedBy=multi-user.target
