--- a/playbook/roles/supervisor/templates/supervisord.init-debian.j2
+++ b/playbook/roles/supervisor/templates/supervisord.init-debian.j2
@@ -3,8 +3,8 @@
 # Downloaded from:
 # http://bazaar.launchpad.net/~ubuntu-branches/ubuntu/trusty/supervisor/trusty/view/head:/debian/supervisor.init
 #
-# skeleton  example file to build /etc/init.d/ scripts.
-#   This file should be used to construct scripts for /etc/init.d.
+# skeleton  example file to build {{ init_dir }}/ scripts.
+#   This file should be used to construct scripts for {{ init_dir }}.
 #
 #   Written by Miquel van Smoorenburg <miquels@cistron.nl>.
 #   Modified for Debian
@@ -163,7 +163,7 @@ case "$1" in
     $SUPERVISORCTL $DAEMON_OPTS status
     ;;
   *)
-  N=/etc/init.d/$NAME
+  N={{ init_dir }}/$NAME
   # echo "Usage: $N {start|stop|restart|reload|force-reload}" >&2
   echo "Usage: $N {start|stop|restart|force-reload|status|force-stop}" >&2
   exit 1
