--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -327,7 +327,7 @@ ckan.dataset.create_on_ui_requires_resources = true
 #package_edit_return_url = http://another.frontend/dataset/<NAME>
 #package_new_return_url = http://another.frontend/dataset/<NAME>
 ## More info: https://docs.ckan.org/en/latest/maintaining/configuration.html#licenses-group-url
-licenses_group_url = http://licenses.opendefinition.org/licenses/groups/ckan.json
+#licenses_group_url = http://licenses.opendefinition.org/licenses/groups/ckan.json
 
 ## Email settings
 #email_to = errors@example.com
