Update mjanez/ckanext-schemingdcat yo v3.2.0

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -43,6 +43,8 @@ schemingdcat.facet_list = {{ ckanext__schemingdcat__facet_list }}
 schemingdcat.organization_custom_facets = {{ ckanext__schemingdcat__organization_custom_facets }}
 schemingdcat.group_custom_facets = {{ ckanext__schemingdcat__group_custom_facets }}
 schemingdcat.geometadata_base_uri = {{ ckanext__schemingdcat__geometadata_base_uri }}
+schemingdcat.default_package_item_icon = {{ ckanext__schemingdcat_default_package_item_icon }}
+schemingdcat.default_package_item_show_spatial = {{ ckanext__schemingdcat_default_package_item_show_spatial }}
 
 ### ckanext-spatial
 # Allow Solr local params
