--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -45,6 +45,7 @@ schemingdcat.group_custom_facets = {{ ckanext__schemingdcat__group_custom_facets
 schemingdcat.geometadata_base_uri = {{ ckanext__schemingdcat__geometadata_base_uri }}
 schemingdcat.default_package_item_icon = {{ ckanext__schemingdcat_default_package_item_icon }}
 schemingdcat.default_package_item_show_spatial = {{ ckanext__schemingdcat_default_package_item_show_spatial }}
+schemingdcat.show_metadata_templates_toolbar = {{ ckanext__schemingdcat_show_metadata_templates_toolbar }}
 
 ### ckanext-spatial
 # Allow Solr local params
