Update schemingdcat metadata templates search identifier

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -46,6 +46,7 @@ schemingdcat.geometadata_base_uri = {{ ckanext__schemingdcat__geometadata_base_u
 schemingdcat.default_package_item_icon = {{ ckanext__schemingdcat_default_package_item_icon }}
 schemingdcat.default_package_item_show_spatial = {{ ckanext__schemingdcat_default_package_item_show_spatial }}
 schemingdcat.show_metadata_templates_toolbar = {{ ckanext__schemingdcat_show_metadata_templates_toolbar }}
+schemingdcat.metadata_templates_search_identifier = {{ ckanext__schemingdcat_metadata_templates_search_identifier }}
 
 ### ckanext-spatial
 # Allow Solr local params
