Fix ckanext-xloader bugs
- Set up api token.
- Update xloader to stable qld-gov-au version.
- Remove manual api_token in vars
- Update old packages (ckanext-dcat and ckanext-schemingdcat)

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -65,7 +65,7 @@ ckanext.geoview.ol_viewer.formats = {{ ckanext__geoview__ol_viewer_formats }}
 ckanext.geoview.geojson.max_file_size = {{ ckanext__geoview__geojson__max_file_size }}
 
 ### ckanext-xloader
-ckanext.xloader.api_token = {{ ckanext__xloader__api_token }}
+ckanext.xloader.api_token = xloader_api_token
 ckanext.xloader.jobs_db.uri={{ ckanext__xloader__jobs_db__uri }}
 
 ### ckanext-pages
