--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -140,6 +140,7 @@ ckan.valid_url_schemes = http https ftp
 ckan.requests.timeout = 5
 ckan.hide_version = false
 ckan.redirect_to_login_if_not_authorized = true
+ckanext.stats.cache_enabled = true
 
 ## Authorization Settings
 ckan.auth.anon_create_dataset = false
