Update ckan search facets default value

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -205,7 +205,7 @@ ckan.search.default_include_private = true
 ckan.search.default_package_sort = score desc, metadata_modified desc
 search.facets = organization groups tags res_format license_id
 search.facets.limit = 50
-search.facets.default = 10
+search.facets.default = {{ ckan_search_facets_default }}
 ckan.extra_resource_fields = 
 ckan.search.rows_max = 1000
 ckan.group_and_organization_list_max = 1000
