Update ckanext-resourcedictionary and schemingdcat
- Add check to update who.ini, CKAN >=2.10 not required.

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -39,18 +39,20 @@ scheming.organization_schemas = {{ ckanext__scheming__organization_schemas }}
 scheming.presets = {{ ckanext__scheming__presets }}
 
 ### ckanext-schemingdcat
-schemingdcat.facet_list = {{ ckanext__schemingdcat__facet_list }}
-schemingdcat.organization_custom_facets = {{ ckanext__schemingdcat__organization_custom_facets }}
-schemingdcat.group_custom_facets = {{ ckanext__schemingdcat__group_custom_facets }}
-schemingdcat.geometadata_base_uri = {{ ckanext__schemingdcat__geometadata_base_uri }}
-schemingdcat.default_package_item_icon = {{ ckanext__schemingdcat_default_package_item_icon }}
-schemingdcat.default_package_item_show_spatial = {{ ckanext__schemingdcat_default_package_item_show_spatial }}
-schemingdcat.show_metadata_templates_toolbar = {{ ckanext__schemingdcat_show_metadata_templates_toolbar }}
-schemingdcat.metadata_templates_search_identifier = {{ ckanext__schemingdcat_metadata_templates_search_identifier }}
-schemingdcat.endpoints_yaml = {{ ckanext__schemingdcat_endpoints_yaml }}
-schemingdcat.social_github = {{ ckanext__schemingdcat_social_github }}
-schemingdcat.social_x = {{ ckanext__schemingdcat_social_x }}
-schemingdcat.social_linkedin = {{ ckanext__schemingdcat_social_linkedin }}
+ckanext.schemingdcat.facet_list = {{ ckanext__schemingdcat__facet_list }}
+ckanext.schemingdcat.organization_custom_facets = {{ ckanext__schemingdcat__organization_custom_facets }}
+ckanext.schemingdcat.group_custom_facets = {{ ckanext__schemingdcat__group_custom_facets }}
+ckanext.schemingdcat.geometadata_base_uri = {{ ckanext__schemingdcat__geometadata_base_uri }}
+ckanext.schemingdcat.default_package_item_icon = {{ ckanext__schemingdcat_default_package_item_icon }}
+ckanext.schemingdcat.default_package_item_show_spatial = {{ ckanext__schemingdcat_default_package_item_show_spatial }}
+ckanext.schemingdcat.show_metadata_templates_toolbar = {{ ckanext__schemingdcat_show_metadata_templates_toolbar }}
+ckanext.schemingdcat.metadata_templates_search_identifier = {{ ckanext__schemingdcat_metadata_templates_search_identifier }}
+ckanext.schemingdcat.endpoints_yaml = {{ ckanext__schemingdcat_endpoints_yaml }}
+ckanext.schemingdcat.social_github = {{ ckanext__schemingdcat_social_github }}
+ckanext.schemingdcat.social_x = {{ ckanext__schemingdcat_social_x }}
+ckanext.schemingdcat.social_linkedin = {{ ckanext__schemingdcat_social_linkedin }}
+ckanext.schemingdcat.postgres.geojson_chars_limit = {{ ckanext__schemingdcat__postgres__geojson_chars_limit }}
+ckanext.schemingdcat.postgres.geojson_tolerance = {{ ckanext__schemingdcat__postgres__geojson_tolerance }}
 
 
 ### ckanext-spatial
