Update uwsgi configuration with new parameters for performance and logging

--- a/playbook/roles/webserver/templates/ckan_uwsgi.ini.j2
+++ b/playbook/roles/webserver/templates/ckan_uwsgi.ini.j2
@@ -1,21 +1,29 @@
 [uwsgi]
 
-http            =  0.0.0.0:{{ ckan_port }}
-uid             =  {{ ckan_user }}
-gid             =  {{ ckan_group }}
-wsgi-file       =  {{ ckan_config_dir}}/wsgi.py
-virtualenv      =  {{ ckan_virtualenv }}
-home            =  {{ ckan_virtualenv }}
-module          =  wsgi:application
-master          =  true
-socket          =  {{ uwsgi_unix_http_server_socket_path }}
-harakiri        =  50
-max-requests    =  5000
-vacuum          =  true
-callable        =  application
-strict          =  true
-enable-threads  =  true
-lazy-apps       =  true
-processes       =  2
-buffer-size     =  32768
-chdir           =  {{ ckan_virtualenv }}
+http                =  0.0.0.0:{{ ckan_port }}
+uid                 =  {{ ckan_user }}
+gid                 =  {{ ckan_group }}
+wsgi-file           =  {{ ckan_config_dir }}/wsgi.py
+virtualenv          =  {{ ckan_virtualenv }}
+home                =  {{ ckan_virtualenv }}
+module              =  wsgi:application
+master              =  true
+socket              =  {{ uwsgi_unix_http_server_socket_path }}
+harakiri            =  60
+max-requests        =  5000
+max-worker-lifetime =  3600
+reload-on-rss       =  2048
+worker-reload-mercy =  60
+vacuum              =  true
+callable            =  application
+strict              =  true
+enable-threads      =  true
+lazy-apps           =  true
+processes           =  4
+buffer-size         =  32768
+chdir               =  {{ ckan_virtualenv }}
+log-maxsize         =  100000
+die-on-term         =  true
+disable-logging     =  true
+log-4xx             =  true
+log-5xx             =  true
