Update Solr configuration to use solr_test_host for testing environments

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -204,7 +204,7 @@ expire_api_token.default_lifetime = 3600
 
 ## Search Settings
 ckan.site_id = {{ ckan_site_id }}
-solr_url = http://{{ solr_host }}:{{ solr_port }}/solr/ckan
+solr_url = http://{{ solr_test_host }}:{{ solr_port }}/solr/ckan
 ckan.search.remove_deleted_packages = true
 ckan.search.solr_commit = true
 ckan.search.show_all_types = dataset
