Add production-specific uwsgi configuration and update logging settings

--- a/playbook/roles/webserver/templates/pro.ckan_uwsgi.ini.j2
+++ b/playbook/roles/webserver/templates/pro.ckan_uwsgi.ini.j2
@@ -24,6 +24,6 @@ buffer-size         =  32768
 chdir               =  {{ ckan_virtualenv }}
 log-maxsize         =  100000
 die-on-term         =  true
-disable-logging     =  false
-log-4xx             =  false
-log-5xx             =  false
+disable-logging     =  true
+log-4xx             =  true
+log-5xx             =  true
