Add ckanext-openapi configuration to development, production, and staging inventories

--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -54,6 +54,8 @@ ckanext.schemingdcat.social_linkedin = {{ ckanext__schemingdcat_social_linkedin 
 ckanext.schemingdcat.postgres.geojson_chars_limit = {{ ckanext__schemingdcat__postgres__geojson_chars_limit }}
 ckanext.schemingdcat.postgres.geojson_tolerance = {{ ckanext__schemingdcat__postgres__geojson_tolerance }}
 
+### ckanext-openapi
+ckanext.openapi.endpoints = {{ ckanext__openapi__endpoints }}
 
 ### ckanext-spatial
 # Allow Solr local params
