--- a/playbook/roles/webserver/templates/sites-available/ckan-pycsw.conf.j2
+++ b/playbook/roles/webserver/templates/sites-available/ckan-pycsw.conf.j2
@@ -8,6 +8,9 @@ server {
     ssl_certificate {{ nginx_dir }}/certs/ckan-local.crt;
     ssl_certificate_key {{ nginx_dir }}/certs/ckan-local.key;
 
+    root /usr/share/nginx/html;
+    index index.html;
+
     # Disable weak ciphers
     ssl_prefer_server_ciphers on;
     ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
@@ -67,11 +70,10 @@ server {
 
     # redirect server error pages to the static page /error.html
     #
-    location = /error.html {
-      ssi on;
-      internal;
-      auth_basic off;
-      root /usr/share/nginx/html;
+    # robots.txt
+    location = /robots.txt {
+        add_header Content-Type text/plain;
+        root /usr/share/nginx/html;
     }
 
 }
