--- a/playbook/roles/ckan/templates/ckan.ini.j2
+++ b/playbook/roles/ckan/templates/ckan.ini.j2
@@ -76,6 +76,7 @@ ckanext.geoview.geojson.max_file_size = {{ ckanext__geoview__geojson__max_file_s
 ### ckanext-xloader
 ckanext.xloader.api_token = xloader_api_token
 ckanext.xloader.jobs_db.uri={{ ckanext__xloader__jobs_db__uri }}
+ckanext.xloader.ssl_verify = {{ ckanext__xloader__ssl_verify }}
 
 ### ckanext-pages
 ckan.pages.allow_html = False
