--- a/playbook/roles/webserver/templates/nginx/nginx.conf.j2
+++ b/playbook/roles/webserver/templates/nginx/nginx.conf.j2
@@ -2,12 +2,12 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  {{ nginx_log_dir }}/error.log notice;
+error_log  {{ nginx_log_dir }}/error.log error;
 pid        /var/run/nginx.pid;
 
 
 events {
-    worker_connections  1024;
+    worker_connections 2048;
 }
 
 
@@ -25,7 +25,7 @@ http {
     tcp_nopush     on;
     tcp_nodelay  on;
     types_hash_max_size 2048;
-    keepalive_timeout  65;
+    keepalive_timeout  20;
 
     # Don't expose Nginx version
     server_tokens off;
